--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -96,6 +96,14 @@
         app:layout_constraintTop_toBottomOf="@id/humidity"
         />
 
-
+        <Button
+            android:id="@+id/forecastButton"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_marginTop="20dp"
+            android:text="Forecast"
+            app:layout_constraintTop_toBottomOf="@id/pressure"
+            app:layout_constraintStart_toStartOf="@id/cityName"
+            />
 
 </androidx.constraintlayout.widget.ConstraintLayout>
