--- a/app/src/main/res/layout/row_date.xml
+++ b/app/src/main/res/layout/row_date.xml
@@ -1,28 +1,28 @@
 <?xml version="1.0" encoding="utf-8"?>
 <androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
-    android:layout_height="75dp"
-    xmlns:app="http://schemas.android.com/apk/res-auto">
+    android:layout_height="75dp">
 
     <ImageView
         android:id="@+id/conditionIcon"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        android:paddingRight="340dp"
-        android:src="@drawable/sun"
         android:contentDescription="@null"
+        android:paddingRight="340dp"
         android:scaleType="center"
-        app:layout_constraintEnd_toEndOf="parent"/>
+        android:src="@drawable/sun"
+        app:layout_constraintEnd_toEndOf="parent" />
 
     <TextView
         android:id="@+id/date"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        android:paddingHorizontal="60dp"
         android:gravity="start|center_vertical"
-        android:textSize="23dp"
-        android:text="Feb 20"/>
+        android:paddingHorizontal="60dp"
+        android:text="Feb 20"
+        android:textSize="23dp" />
 
     <TextView
         android:id="@+id/tempLabel"
@@ -30,36 +30,33 @@
         android:layout_height="match_parent"
         android:paddingLeft="140dp"
         android:paddingTop="12dp"
-        android:textSize="17dp"
         android:text="Temp 23"
-        />
+        android:textSize="12dp" />
+
     <TextView
         android:id="@+id/highLowLabel"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
         android:paddingLeft="140dp"
         android:paddingTop="38dp"
-        android:textSize="17dp"
         android:text="High 23 low 23"
-        />
+        android:textSize="12dp" />
 
     <TextView
         android:id="@+id/sunriseLabel"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        android:paddingLeft="290dp"
+        android:paddingLeft="280dp"
         android:paddingTop="12dp"
-        android:textSize="14dp"
         android:text="Sunrise 6:00pm"
-        />
+        android:textSize="14dp" />
 
     <TextView
         android:id="@+id/sunsetLabel"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        android:paddingLeft="290dp"
+        android:paddingLeft="280dp"
         android:paddingTop="38dp"
-        android:textSize="14dp"
         android:text="Sunset 6:00pm"
-        />
+        android:textSize="14dp" />
 </androidx.constraintlayout.widget.ConstraintLayout>
