--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -10,58 +10,57 @@
         android:id="@+id/cityName"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:text="@string/st_paul_mn"
         android:layout_margin="12dp"
-        android:textSize="18sp"
+        android:text="@string/st_paul_mn"
         android:textColor="@color/black"
+        android:textSize="18sp"
         app:layout_constraintLeft_toLeftOf="parent"
         app:layout_constraintRight_toRightOf="parent"
         app:layout_constraintTop_toTopOf="parent" />
-    
+
     <TextView
         android:id="@+id/temperature"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:textSize="72sp"
         android:layout_marginStart="48dp"
         android:layout_marginTop="12dp"
-        android:textColor="@color/black"
         android:text="@string/temperature"
-        app:layout_constraintTop_toBottomOf="@id/cityName"
-        app:layout_constraintStart_toStartOf="parent" />
+        android:textColor="@color/black"
+        android:textSize="72sp"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@id/cityName" />
 
     <ImageView
         android:id="@+id/conditionIcon"
         android:layout_width="72dp"
         android:layout_height="72dp"
-        android:src="@drawable/sun"
         android:contentDescription="@null"
         android:scaleType="center"
-        app:layout_constraintTop_toTopOf="@id/temperature"
-        app:layout_constraintStart_toEndOf="@id/temperature"
+        android:src="@drawable/sun"
         app:layout_constraintBottom_toBottomOf="@id/temperature"
-        app:layout_constraintEnd_toEndOf="parent"/>
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toEndOf="@id/temperature"
+        app:layout_constraintTop_toTopOf="@id/temperature" />
 
     <TextView
         android:id="@+id/feelsLike"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        app:layout_constraintTop_toBottomOf="@id/temperature"
-        app:layout_constraintStart_toStartOf="@id/temperature"
+        android:text="@string/feelsLike"
         app:layout_constraintEnd_toEndOf="@id/temperature"
-        android:text="@string/feelsLike"/>
+        app:layout_constraintStart_toStartOf="@id/temperature"
+        app:layout_constraintTop_toBottomOf="@id/temperature" />
 
     <TextView
         android:id="@+id/low"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
+        android:layout_marginTop="24dp"
         android:text="@string/low"
         android:textColor="@color/black"
         android:textSize="14sp"
         app:layout_constraintStart_toStartOf="@id/temperature"
-        android:layout_marginTop="24dp"
-        app:layout_constraintTop_toBottomOf="@id/feelsLike"
-        />
+        app:layout_constraintTop_toBottomOf="@id/feelsLike" />
 
     <TextView
         android:id="@+id/high"
@@ -71,8 +70,7 @@
         android:textColor="@color/black"
         android:textSize="14sp"
         app:layout_constraintStart_toStartOf="@id/low"
-        app:layout_constraintTop_toBottomOf="@id/low"
-        />
+        app:layout_constraintTop_toBottomOf="@id/low" />
 
     <TextView
         android:id="@+id/humidity"
@@ -82,8 +80,7 @@
         android:textColor="@color/black"
         android:textSize="14sp"
         app:layout_constraintStart_toStartOf="@id/high"
-        app:layout_constraintTop_toBottomOf="@id/high"
-        />
+        app:layout_constraintTop_toBottomOf="@id/high" />
 
     <TextView
         android:id="@+id/pressure"
@@ -93,17 +90,15 @@
         android:textColor="@color/black"
         android:textSize="14sp"
         app:layout_constraintStart_toStartOf="@id/humidity"
-        app:layout_constraintTop_toBottomOf="@id/humidity"
-        />
+        app:layout_constraintTop_toBottomOf="@id/humidity" />
 
-        <Button
-            android:id="@+id/forecastButton"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_marginTop="20dp"
-            android:text="Forecast"
-            app:layout_constraintTop_toBottomOf="@id/pressure"
-            app:layout_constraintStart_toStartOf="@id/cityName"
-            />
+    <Button
+        android:id="@+id/forecastButton"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginTop="20dp"
+        android:text="Forecast"
+        app:layout_constraintStart_toStartOf="@id/cityName"
+        app:layout_constraintTop_toBottomOf="@id/pressure" />
 
 </androidx.constraintlayout.widget.ConstraintLayout>
