--- a/app/src/main/res/layout/zipcodeentry.xml
+++ b/app/src/main/res/layout/zipcodeentry.xml
@@ -4,6 +4,8 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:gravity="center_horizontal"
+    android:id="@+id/zipCodeFragment"
+    android:name="androidx.navigation.fragment.NavHostFragment"
     >
 
     <EditText
