--- a/app/src/main/res/layout/currentconditions.xml
+++ b/app/src/main/res/layout/currentconditions.xml
@@ -1,5 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
 <androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     xmlns:app="http://schemas.android.com/apk/res-auto"
@@ -99,5 +100,15 @@
         android:text="Forecast"
         app:layout_constraintStart_toStartOf="@id/cityName"
         app:layout_constraintTop_toBottomOf="@id/pressure" />
+
+    <TextView
+        android:id="@+id/zipCodeIs"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:text="The zip is: "
+        android:textSize="20sp"
+        tools:ignore="MissingConstraints"
+        tools:layout_editor_absoluteX="162dp"
+        tools:layout_editor_absoluteY="374dp" />
 
 </androidx.constraintlayout.widget.ConstraintLayout>
