Got the current conditions working
Got the current conditions working

--- a/app/src/main/res/navigation/navigation.xml
+++ b/app/src/main/res/navigation/navigation.xml
@@ -29,6 +29,14 @@
             android:name="zipCodeArgument"
             app:argType="string"
             app:nullable="true" />
+        <argument
+            android:name="latitudeArgument"
+            app:argType="string"
+            app:nullable="true" />
+        <argument
+            android:name="longitudeArgument"
+            app:argType="string"
+            app:nullable="true" />
     </fragment>
 
     <!--    Forecast Conditions Frag -->
@@ -38,6 +46,14 @@
         android:label="ForecastFragment" >
         <argument
             android:name="zipCodeArgument"
+            app:argType="string"
+            app:nullable="true" />
+        <argument
+            android:name="latitudeArgument"
+            app:argType="string"
+            app:nullable="true" />
+        <argument
+            android:name="longitudeArgument"
             app:argType="string"
             app:nullable="true" />
     </fragment>
